crates/panache-parser/tests/snapshots/yaml__yaml_suite_9SHH.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 9SHH
input: "single: 'text'\ndouble: \"text\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
