crates/panache-parser/tests/snapshots/yaml__yaml_suite_A6F9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: A6F9
input: "strip: |-\n  text\nclip: |\n  text\nkeep: |+\n  text\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
