crates/panache-parser/tests/snapshots/yaml__yaml_suite_A984.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: A984
input: "a: b\n c\nd:\n e\n  f\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
