crates/panache-parser/tests/snapshots/yaml__yaml_suite_AB8U.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: AB8U
input: "- single multiline\n - sequence entry\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
