crates/panache-parser/tests/snapshots/yaml__yaml_suite_AVM7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: AVM7
input: ""
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
