crates/panache-parser/tests/snapshots/yaml__yaml_suite_AZW3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: AZW3
input: "- bla\"keks: foo\n- bla]keks: foo\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
