crates/panache-parser/tests/snapshots/yaml__yaml_suite_B3HG.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: B3HG
input: "--- >\n folded\n text\n\n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
